Update config to enable docfx v3

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -68,10 +68,12 @@
   },
   "need_generate_pdf_url_template": true,
   "resolve_user_profile_using_github": true,
-
   "Targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
     }
+  },
+  "docs_build_engine": {
+    "name": "docfx_v3"
   }
 }
