--- a/WindowsServerDocs/security/security-and-assurance.yml
+++ b/WindowsServerDocs/security/security-and-assurance.yml
@@ -5,11 +5,11 @@ summary: Windows Server Security provides layers of protection built into the op
 
 metadata:
   title: Windows Server Security documentation
-  description: An overview of Security in Windows Server. 
+  description: An overview of Security in Windows Server.
   ms.topic: landing-page # Required
   author: coreyp-at-msft
   ms.author: coreyp
-  ms.date: 5/19/2020 
+  ms.date: 5/19/2020
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | sample | tutorial | video | whats-new
 
@@ -30,11 +30,11 @@ landingContent:
           - text: Protecting Your Datacenter and Cloud from Emerging Threats blog post
             url: https://blogs.technet.com/b/windowsserver/archive/2015/11/18/protecting-your-datacenter-and-cloud-november-update.aspx
           - text: Security and Assurance Overview session at Ignite
-            url: https://channel9.msdn.com/events/ignite/2015/brk2482 
-  
+            url: https://channel9.msdn.com/events/ignite/2015/brk2482
+
   # Card
   - title: Secure virtualization with Shielded VMs
-    linkLists:            
+    linkLists:
       - linkListType: video
         links:
           - text: Shielded VM in Channel 9
@@ -53,7 +53,7 @@ landingContent:
             url: guarded-fabric-shielded-vm/guarded-fabric-manage-branch-office.md
           - text: Shielded VM and Guarded Fabric Troubleshooting Guide
             url: guarded-fabric-shielded-vm/guarded-fabric-troubleshoot-overview.md
-                              
+
   # Card
   - title: Hardening the OS and applications
     linkLists:
@@ -90,7 +90,7 @@ landingContent:
           - text: Just Enough Administration demo video
             url: https://www.youtube.com/watch?v=xnBrbkY9P20
 
-  # Card 
+  # Card
   - title: Credential Protection
     linkLists:
       - linkListType: overview
@@ -152,6 +152,6 @@ landingContent:
       - linkListType: overview
         links:
           - text: Windows previous versions documentation
-            url: https://docs.microsoft.com/previous-versions/windows/
+            url: /previous-versions/windows/
           - text: Search for specific information
             url: https://docs.microsoft.com/search/?search=Windows+Server&dataSource=previousVersions
