Links: Windows Server - Remaining - 1

--- a/WindowsServerDocs/index.yml
+++ b/WindowsServerDocs/index.yml
@@ -17,25 +17,25 @@ highlightedContent:
   items:
     - title: What's new in Windows Server 2019?
       itemType: whats-new # controls the icon image and super-title text
-      url: /windows-server/get-started-19/whats-new-19
+      url: ./get-started-19/whats-new-19.md
     - title: Get started with Windows Server 2019
       itemType: overview
-      url: /windows-server/get-started-19/get-started-19
+      url: ./get-started-19/get-started-19.md
     - title: Windows Admin Center
       itemType: how-to-guide
-      url: /windows-server/manage/windows-admin-center/overview
+      url: ./manage/windows-admin-center/overview.md
     - title: Hyper-converged infrastructure
       itemType: overview
-      url: /windows-server/hyperconverged/index
+      url: ./hyperconverged/index.yml
     - title: Connect to Azure hybrid services
       itemType: how-to-guide
-      url: /windows-server/azure-hybrid-services/index
+      url: ./manage/windows-admin-center/azure/index.md
     - title: Get started with Windows Server 2016
       itemType: how-to-guide
-      url: /windows-server/get-started/server-basics
+      url: ./get-started/server-basics.md
     - title: Use Windows Server 2008 and 2008 R2 Extended Security Updates
       itemType: how-to-guide
-      url: /windows-server/get-started/extended-security-updates
+      url: ./get-started/extended-security-updates.md
     - title: Windows Insider Program for Server
       itemType: overview
       url: /windows-insider/at-work/
@@ -44,140 +44,140 @@ conceptualContent:
   items:
     - title: Upgrade Windows Server
       links:
-        - url: /windows-server/upgrade/upgrade-2016-to-2019
+        - url: ./upgrade/upgrade-2016-to-2019.md
           itemType: how-to-guide
           text: Upgrade Windows Server 2016
-        - url: /windows-server/upgrade/upgrade-2012r2-to-2019
+        - url: ./upgrade/upgrade-2012r2-to-2019.md
           itemType: how-to-guide
           text: Upgrade Windows Server 2012 R2
-        - url: /windows-server/upgrade/upgrade-2012-to-2016
+        - url: ./upgrade/upgrade-2012-to-2016.md
           itemType: how-to-guide
           text: Upgrade Windows Server 2012
-        - url: /windows-server/upgrade/upgrade-2008r2-to-2012r2
+        - url: ./upgrade/upgrade-2008r2-to-2012r2.md
           itemType: how-to-guide
           text: Upgrade Windows Server 2008 R2
       footerLink:
-        url: /windows-server/upgrade/upgrade-overview
+        url: ./upgrade/upgrade-overview.md
         text: See more
 
     - title: Identity and access
       links:
-        - url: /windows-server/identity/ad-ds/ad-ds-getting-started
+        - url: ./identity/ad-ds/ad-ds-getting-started.md
           itemType: overview
           text: Getting started with Active Directory Domain Services (AD DS)
-        - url: /windows-server/identity/active-directory-federation-services
+        - url: ./identity/active-directory-federation-services.md
           itemType: overview
           text: Active Directory Federation Services (AD FS)
-        - url: /windows-server/identity/securing-privileged-access/securing-privileged-access
+        - url: ./identity/securing-privileged-access/securing-privileged-access.md
           itemType: concept
           text: Securing privileged access
       footerLink:
-        url: /windows-server/identity/identity-and-access
+        url: ./identity/identity-and-access.yml
         text: See more
 
     - title: Failover Clustering
       links:
-        - url: /windows-server/failover-clustering/whats-new-in-failover-clustering
+        - url: ./failover-clustering/whats-new-in-failover-clustering.md
           itemType: whats-new
           text: What's new in Failover Clustering
-        - url: /windows-server/failover-clustering/create-failover-cluster
+        - url: ./failover-clustering/create-failover-cluster.md
           itemType: how-to-guide
           text: Create a failover cluster
-        - url: /windows-server/failover-clustering/cluster-aware-updating
+        - url: ./failover-clustering/cluster-aware-updating.md
           itemType: overview
           text: Cluster-Aware Updating overview
       footerLink:
-        url: /windows-server/failover-clustering/failover-clustering-overview
+        url: ./failover-clustering/failover-clustering-overview.md
         text: See more
 
     - title: Management
       links:
-        - url: /windows-server/manage/windows-admin-center/overview
+        - url: ./manage/windows-admin-center/overview.md
           itemType: overview
           text: Use Windows Admin Center to manage your environment
-        - url: /windows-server/manage/system-insights/overview
+        - url: ./manage/system-insights/overview.md
           itemType: overview
           text: System Insights overview
-        - url: /windows-server/administration/performance-tuning/
+        - url: ./administration/performance-tuning/index.md
           itemType: overview
           text: Performance tuning guidelines for Windows Server 2016
       footerLink:
-        url: /windows-server/administration/manage-windows-server
+        url: ./administration/manage-windows-server.yml
         text: See more
 
     - title: Networking
       links:
-        - url: /windows-server/networking/what-s-new-in-networking
+        - url: ./networking/what-s-new-in-networking.md
           itemType: whats-new
           text: What's new in networking
-        - url: /windows-server/networking/sdn/
+        - url: ./networking/sdn/index.yml
           itemType: overview
           text: Software-defined Networking (SDN) overview
-        - url: /windows-server/networking/sdn/technologies/network-controller/network-controller
+        - url: ./networking/sdn/technologies/network-controller/network-controller.md
           itemType: overview
           text: Network controller
       footerLink:
-        url: /windows-server/networking/networking
+        url: ./networking/index.yml
         text: See more
 
     - title: Remote
       links:
-        - url: /windows-server/remote/remote-desktop-services/welcome-to-rds
+        - url: ./remote/remote-desktop-services/welcome-to-rds.md
           itemType: overview
           text: Remote Desktop Services overview
-        - url: /windows-server/remote/remote-desktop-services/clients/remote-desktop-clients
+        - url: ./remote/remote-desktop-services/clients/remote-desktop-clients.md
           itemType: overview
           text: Remote Desktop clients
-        - url: /windows-server/remote/remote-desktop-services/clients/remote-desktop-allow-access
+        - url: ./remote/remote-desktop-services/clients/remote-desktop-allow-access.md
           itemType: how-to-guide
           text: Remote Desktop - Allow access to your PC
       footerLink:
-        url: /windows-server/remote/index
+        url: ./remote/index.yml
         text: See more
 
     - title: Security and assurance
       links:
-        - url: /windows-server/security/windows-authentication/windows-authentication-overview
+        - url: ./security/windows-authentication/windows-authentication-overview.md
           itemType: overview
           text: Windows Authentication overview
-        - url: /windows-server/security/group-managed-service-accounts/getting-started-with-group-managed-service-accounts
+        - url: ./security/group-managed-service-accounts/getting-started-with-group-managed-service-accounts.md
           itemType: how-to-guide
           text: Getting started with group-managed service accounts
-        - url: /windows-server/security/windows-authentication/credentials-processes-in-windows-authentication
+        - url: ./security/windows-authentication/credentials-processes-in-windows-authentication.md
           itemType: overview
           text: Credentials processes in Windows Authentication
       footerLink:
-        url: /windows-server/security/security-and-assurance
+        url: ./security/security-and-assurance.yml
         text: See more
 
     - title: Storage
       links:
-        - url: /windows-server/storage/whats-new-in-storage
+        - url: ./storage/whats-new-in-storage.md
           itemType: whats-new
           text: What's new in storage
-        - url: /windows-server/storage/disk-management/overview-of-disk-management
+        - url: ./storage/disk-management/overview-of-disk-management.md
           itemType: overview
           text: Disk management overview
-        - url: /windows-server/storage/storage-spaces/understand-quorum
+        - url: ./storage/storage-spaces/understand-quorum.md
           itemType: overview
           text: Understanding cluster and pool quorum
       footerLink:
-        url: /windows-server/storage/storage
+        url: ./storage/storage.yml
         text: See more
 
     - title: Troubleshoot
       links:
-        - url: /windows-server/manage/windows-admin-center/support/troubleshooting
+        - url: ./manage/windows-admin-center/support/troubleshooting.md
           itemType: how-to-guide
           text: Troubleshoot Windows Admin Center
-        - url: /windows-server/failover-clustering/troubleshooting-using-wer-reports
+        - url: ./failover-clustering/troubleshooting-using-wer-reports.md
           itemType: how-to-guide
           text: Troubleshoot failover clustering using Windows Error Reporting
-        - url: /windows-server/storage/disk-management/troubleshooting-disk-management
+        - url: ./storage/disk-management/troubleshooting-disk-management.md
           itemType: how-to-guide
           text: Troubleshoot disk management
       footerLink:
-        url: /windows-server/troubleshoot/windows-server-troubleshooting
+        url: ./troubleshoot/windows-server-troubleshooting.md
         text: See more
 
     - title: Virtualization
@@ -185,14 +185,14 @@ conceptualContent:
         - url: /virtualization/windowscontainers/
           itemType: overview
           text: Containers on Windows overview
-        - url: /windows-server/virtualization/hyper-v/hyper-v-on-windows-server
+        - url: ./virtualization/hyper-v/hyper-v-on-windows-server.md
           itemType: overview
           text: Hyper-V on Windows Server
-        - url: /windows-server/virtualization/hyper-v-virtual-switch/hyper-v-virtual-switch
+        - url: ./virtualization/hyper-v-virtual-switch/hyper-v-virtual-switch.md
           itemType: overview
           text: Hyper-V Virtual Switch overview
       footerLink:
-        url: /windows-server/virtualization/virtualization
+        url: ./virtualization/virtualization.yml
         text: See more
 
 additionalContent:
@@ -203,4 +203,4 @@ additionalContent:
         url: /previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/hh801901(v=ws.11)
       - title: Windows Server Essentials
         summary: Technical content for for IT professionals administering Windows Server Essentials, the cloud-connected first server designed for small businesses with up to 25 users and 50 devices.
-        url: https://docs.microsoft.com/en-us/windows-server-essentials/get-started/get-started
+        url: /windows-server-essentials/get-started/get-started
