--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -42,14 +42,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: Take action - February 2021 security update available for all supported versions of Windows
+          url: https://support.microsoft.com/help/4601319
+          itemType: whats-new
+        - text: Multiple Security Updates Affecting TCP/IP - CVE-2021-24074, CVE-2021-24094, and CVE-2021-24086
+          url: https://aka.ms/tcpipvulns
+          itemType: whats-new
         - text: The quickest way to learn about Windows release health 
           url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/the-quickest-way-to-learn-about-windows-release-health/ba-p/2118080
-          itemType: whats-new
-        - text: The new Microsoft Edge to replace Microsoft Edge Legacy with April’s Windows 10 cumulative monthly security update
-          url: https://aka.ms/EdgeLegacyEOS
-          itemType: whats-new
-        - text: January 2021 Windows "C" optional release for Windows 10, version 20H2 and Windows 10, version 2004 is available
-          url: https://support.microsoft.com/help/4598291
           itemType: whats-new
 
       footerLink:
