--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -42,14 +42,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
-        - text: "Out-of-band update to address unexpected results when printing from some apps or to some printers"
-          url: https://support.microsoft.com/help/5001649
-          itemType: whats-new
         - text: "Out-of-band update to address an error when attempting to print to certain printers"
           url: https://support.microsoft.com/help/5001567
           itemType: whats-new
         - text: "Take action: March 2021 security update available for all supported versions of Windows"
           url: https://support.microsoft.com/help/5000802
+          itemType: whats-new
+        - text: "Microsoft Ignite 2021 shows off the latest Windows capabilities"
+          url: https://blogs.windows.com/windowsexperience/2021/03/01/a-guide-to-windows-devices-at-microsoft-ignite-2021/
           itemType: whats-new
 
       footerLink:
