--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -42,7 +42,7 @@ conceptualContent:
   items:
     - title: Message center
       links:
-        - text: "Windows release health on M365 Admin Center"
+        - text: "Windows release health on Microsoft 365 Admin Center"
           url: https://aka.ms/WRH-GA
           itemType: whats-new
         - text: "March 2021 Windows non-security preview \"C\" release is available for some versions for Windows 10"
