--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -42,14 +42,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "Take action: April 2021 security update available for all supported versions of Windows"
+          url: https://support.microsoft.com/help/5001330
+          itemType: whats-new
         - text: "Reminder: End of service for Windows 10, version 1909 and others - May 11, 2020"
           url: https://docs.microsoft.com/windows/release-information/windows-message-center#1585
           itemType: whats-new
         - text: "March 2021 Windows non-security preview \"C\" release for Windows 10, version 20H2 is available"
           url: https://support.microsoft.com/help/5000842
-          itemType: whats-new
-        - text: "Windows release health on Microsoft 365 Admin Center"
-          url: https://aka.ms/WRH-GA
           itemType: whats-new
 
       footerLink:
